# yeclite

./: README.md  afterSignHook.js  package.json  yecdev_public_key.asc
.github/workflows/: electron.yml
app/: Routes.js  app.html  menu.js  package.json  rpc.js
app/components/: LoadingScreen.js  Receive.js  Send.js  ServerSelectModal.js  Sidebar.js  Sidebar.module.css  Transactions.js  Zcashd.js  Zcashd.module.css
app/utils/: AddressbookImpl.js  uris.js  utils.js
configs/: SIGNATURES_README
native/: Cargo.toml
native/src/: lib.rs
